# sasist

./: .dockerignore  .gitignore  ARCHITECTURE.md  BACKEND_REPEATER_EMPTY_PDF_ANALYSIS.md  BUILDING_BOUNDARY_ANALYSIS.md  BUILDING_UX_ANALYSIS.md  CATALOG_UI_IMPROVEMENT.md  CONDITIONAL_STYLING_ANALYSIS.md  CURRENT_ROW_INDEX_ANALYSIS.md  CYLINDER_CAPACITY_ROOT_CAUSE_ANALYSIS.md  DESIGNER_TOOLBAR_UX_UPDATE.md  Dockerfile  FIX_PRODUCT_DIMENSION_MAPPING.md  LABEL_ENGINE_V2_ANALYSIS.md  LABEL_RENDERING_ARCHITECTURE_AUDIT.md  LABEL_RENDERING_PIPELINE_ANALYSIS.md  LOCATION_BIN_LEVEL_REFACTOR_IMPACT_ANALYSIS.md  LOCATION_NAMING_REDESIGN_ANALYSIS.md  OTHER_LOCATIONS_SIDEBAR_ANALYSIS.md  PACKING_LAYOUT_PREVIEW.md  PRODUCT_LOCATIONS_ANALYSIS.md  PRODUCT_ORIENTATION_AND_SHAPE.md  PROJECT_CHANGELOG.md  PROJECT_CONTEXT.md  PROJECT_STRUCTURE_MAP.md  Procfile  RACK_INTERACTION_UX_IMPROVEMENTS.md  RACK_LABEL_BINDING_BUG_ANALYSIS.md  RACK_LABEL_DOWNLOAD_CODE_PATH_AND_FIX.md  RACK_LABEL_LOC_NAME_BINDING_ANALYSIS.md  RACK_LABEL_PDF_PAGE_SIZE_ANALYSIS.md  RACK_LOCATION_NAMING_ANALYSIS.md  RACK_NAME_LABEL_VARIABLE_ANALYSIS.md  RACK_PROPERTIES_UX_FIXES.md  RACK_STRIP_TEMPLATE_ANALYSIS.md  RACK_TEMPLATE_EDITOR_UX_PROPOSAL.md  RELEASE_NOTES.md  REPEATER_CHILDREN_EDITABILITY_ANALYSIS.md  REPEATER_CHILD_RESIZE_ROTATION_ANALYSIS.md  REPEATER_EMPTY_PDF_INVESTIGATION.md  (+23 more)
sasist-printer-agent/: .gitignore  README.md  VERSION  agent.spec  pyproject.toml  requirements.txt  service.spec  updater.spec
sasist-printer-agent/agent/: __init__.py  __main__.py  api.py  app.py  auth.py  build_info.py  config.py  (+14 more)
(+4216 files in other folders)
